# online-shop

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
app/: database.py  logger.py  main.py
app/api/: categories.py  orders.py  products.py  users.py
app/domain/: categories.py  orders.py  products.py  users.py
app/infrastructure/: config.py  database.py  utils.py
app/infrastructure/admin_panel/: veiws.py
app/infrastructure/auth/: auth.py  dependencies.py  models.py  user_manager.py
app/infrastructure/auth/actions/: create_superuser.py
app/infrastructure/auth/dependencies/: FastAPIUsersObject.py  UserObject.py  access_token_db.py  backend.py  strategy.py  user_db.py  user_manager.py
app/infrastructure/migrations/: env.py
app/infrastructure/migrations/versions/: 2863594a22a2_.py  3c10c594a883_обновление_модели_users.py  5021599fe0ef_описание_изменения.py  606d79b696b8_.py  8e1139e546e3_.py  (+2 more)
app/infrastructure/tasks/: celery_app.py  tasks.py
app/migrations/: env.py
app/migrations/versions/: 38d97867b3c5_initial_migration.py
app/repositories/: base_repo.py  categories_repo.py  orders_repo.py  products_repo.py  users_repo.py
app/schemas/: categories_schemas.py  orders_schemas.py  products_schemas.py  users_schemas.py
app/services/: categories_service.py  orders_service.py  products_service.py  users_service.py
tests/: __init__.py  conftest.py  mock_categories.json
tests/data_for_test_db/: mock_orders.json  mock_products.json  mock_users.json
tests/integration_tests/api/: test_users_api.py
tests/unit_tests/domain/: test_categories.py  test_orders.py  test_products.py  test_users.py
tests/unit_tests/repositories/: test_base_repo.py  test_categories_repo.py  test_orders_repo.py  test_products_repo.py  test_users_repo.py
tests/unit_tests/services/: test_categories_service.py  test_orders_service.py  test_products_service.py  test_users_service.py
