[tool.poetry]
name = "onlineshop"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.3"}
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
asyncpg = "^0.30.0"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}
celery = "^5.4.0"
flower = "^2.0.1"
pillow = "^11.0.0"
sqladmin = {extras = ["full"], version = "^0.20.1"}
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
python-dotenv = "^1.0.1"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
autoflake = "^2.3.1"
pyright = "^1.1.387"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']